@@ -29,7 +29,6 @@ import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.ui.*;
 import org.jackhuang.hmcl.util.io.FileUtils;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.InvalidPathException;
@@ -39,8 +38,8 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
+import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
 public final class WorldListPage extends ListPageBase<WorldListItem> implements VersionPage.VersionLoadable {
     private final BooleanProperty showAll = new SimpleBooleanProperty(this, "showAll", false);
@@ -61,7 +60,7 @@ public final class WorldListPage extends ListPageBase<WorldListItem> implements 
             if (worlds != null)
                 itemsProperty().setAll(worlds.stream()
                         .filter(world -> isShowAll() || world.getGameVersion() == null || world.getGameVersion().equals(gameVersion))
-                        .map(world -> new WorldListItem(world, backupsDir)).collect(Collectors.toList()));
+                        .map(world -> new WorldListItem(this, world, backupsDir)).toList());
         });
     }
 
@@ -79,6 +78,10 @@ public final class WorldListPage extends ListPageBase<WorldListItem> implements 
         refresh();
     }
 
+    public void remove(WorldListItem item) {
+        itemsProperty().remove(item);
+    }
+
     public void refresh() {
         if (profile == null || id == null)
             return;
@@ -94,14 +97,13 @@ public final class WorldListPage extends ListPageBase<WorldListItem> implements 
                     worlds = result;
                     setLoading(false);
                     if (exception == null) {
-                        itemsProperty().setAll(result.stream().filter(world -> isShowAll() || world.getGameVersion() == null || world.getGameVersion().equals(gameVersion))
-                                .map(world -> new WorldListItem(world, backupsDir)).collect(Collectors.toList()));
+                        itemsProperty().setAll(result.stream()
+                                .filter(world -> isShowAll() || world.getGameVersion() == null || world.getGameVersion().equals(gameVersion))
+                                .map(world -> new WorldListItem(this, world, backupsDir))
+                                .collect(Collectors.toList()));
                     } else {
                         LOG.warning("Failed to load world list page", exception);
                     }
-
-                    // https://github.com/HMCL-dev/HMCL/issues/938
-                    System.gc();
                 }).start();
     }
 
@@ -109,7 +111,7 @@ public final class WorldListPage extends ListPageBase<WorldListItem> implements 
         FileChooser chooser = new FileChooser();
         chooser.setTitle(i18n("world.import.choose"));
         chooser.getExtensionFilters().setAll(new FileChooser.ExtensionFilter(i18n("world.extension"), "*.zip"));
-        List<File> res = chooser.showOpenMultipleDialog(Controllers.getStage());
+        List<Path> res = FileUtils.toPaths(chooser.showOpenMultipleDialog(Controllers.getStage()));
 
         if (res == null || res.isEmpty()) return;
         installWorld(res.get(0));
@@ -120,15 +122,15 @@ public final class WorldListPage extends ListPageBase<WorldListItem> implements 
         Controllers.navigate(Controllers.getDownloadPage());
     }
 
-    private void installWorld(File zipFile) {
+    private void installWorld(Path zipFile) {
         // Only accept one world file because user is required to confirm the new world name
         // Or too many input dialogs are popped.
-        Task.supplyAsync(() -> new World(zipFile.toPath()))
+        Task.supplyAsync(() -> new World(zipFile))
                 .whenComplete(Schedulers.javafx(), world -> {
                     Controllers.prompt(i18n("world.name.enter"), (name, resolve, reject) -> {
                         Task.runAsync(() -> world.install(savesDir, name))
                                 .whenComplete(Schedulers.javafx(), () -> {
-                                    itemsProperty().add(new WorldListItem(new World(savesDir.resolve(name)), backupsDir));
+                                    itemsProperty().add(new WorldListItem(this, new World(savesDir.resolve(name)), backupsDir));
                                     resolve.run();
                                 }, e -> {
                                     if (e instanceof FileAlreadyExistsException)
